2007-01-13  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in:
	* gnome-modules.xml.in: Branch libwnck for gnome-2-16.

2007-01-13  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Add damned-lies.

2007-01-13  Danilo Šegan  <danilo@gnome.org>

	* accept.py: Import from ViewCVS to handle Accept-Language.

	* templates/, *.py: Added i18n support.
	* po/: Added i18n infrastructure.

	* l10n.py (gettext, MyFilter): Added template translation and filter.
	* Makefile (po/%.xml, all): generate translated versions.
	* defaults.py (language): Added.
	* data.py (readFromFile): Use translated XML if available.

2007-01-08  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Update Catalan mailing list.

2007-01-07  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.po_file_stats): Add executable
	bit check for po files.

	* templates/language-release-module-xml.tmpl: Fix branch listing
	in svnpath.

2007-01-07  Danilo Šegan  <danilo@gnome.org>

	* templates/team.tmpl: Fix IM listing.

	* templates/language-release-module-xml.tmpl: Add svnpath.

	* update-stats.py (LocStatistics.po_file_stats): ignore case in
	UTF-8 encoding check.

2007-01-07  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in:
	* people.xml.in: Update Occitan coordinator.

2007-01-07  Hendrik Richter  <hendrikr@gnome.org>

	* people.xml.in: Update myself.

2007-01-06  Danilo Šegan  <danilo@gnome.org>

	* templates/language-release-doc-stats-modules.tmpl:
	* templates/language-release-ui-stats-modules.tmpl:
	Show pot and po errors/warnings.

	* releases.py: Revert to untranslated count from potsize-tr-fz.

2007-01-06  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py: Add support for 'trunk' instead of 'HEAD'.

2007-01-04  Lucas Rocha  <lucasr@gnome.org>

	* gnome-modules.xml.in: Change the eog layout some, and update
	project information.
	* people.xml.in: Add myself.

2007-01-04  Guilherme de S. Pastore  <gpastore@gnome.org>
