@@ -1,5 +1,9 @@
 2007-01-13  Danilo Šegan  <danilo@gnome.org>
 
+	* l10n.py (trans): Optimize to load MO file only once.
+
+2007-01-13  Danilo Šegan  <danilo@gnome.org>
+
 	* releases.xml.in:
 	* gnome-modules.xml.in: Branch libwnck for gnome-2-16.
 
